--- a/CNN/read_training_results.ipynb
+++ b/CNN/read_training_results.ipynb
@@ -483,6 +483,122 @@
     "print_ACC_AUC(df, sample_type)\n",
     "print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2 quark & 2 gluon jet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-03-31' and time < '2025-04-01'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: 2, gluon jet: 2, L: 3000 fb^-1, pT normalized\n",
+      "ACC: 0.900 ± 0.000\n",
+      "AUC: 0.740 ± 0.010\n",
+      "$0.900 \\pm 0.000$ & $0.740 \\pm 0.010$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.655 ± 0.008\n",
+      "AUC: 0.710 ± 0.009\n",
+      "$0.655 \\pm 0.008$ & $0.710 \\pm 0.009$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: 2, gluon jet: 2, L: 3000 fb^-1, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Jet tagging without $p_\\text{T}$ normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-04-07' and time < '2025-04-08'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gluon jet: = 2, L: 3000 fb^-1\n",
+      "ACC: 0.934 ± 0.000\n",
+      "AUC: 0.695 ± 0.015\n",
+      "$0.934 \\pm 0.000$ & $0.695 \\pm 0.015$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.643 ± 0.009\n",
+      "AUC: 0.689 ± 0.011\n",
+      "$0.643 \\pm 0.009$ & $0.689 \\pm 0.011$\n",
+      "\n",
+      "gluon jet: >= 1, L: 3000 fb^-1\n",
+      "ACC: 0.615 ± 0.004\n",
+      "AUC: 0.634 ± 0.006\n",
+      "$0.615 \\pm 0.004$ & $0.634 \\pm 0.006$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.646 ± 0.008\n",
+      "AUC: 0.690 ± 0.011\n",
+      "$0.646 \\pm 0.008$ & $0.690 \\pm 0.011$\n",
+      "\n",
+      "quark jet: 2, gluon jet: 2, L: 3000 fb^-1\n",
+      "ACC: 0.900 ± 0.000\n",
+      "AUC: 0.743 ± 0.011\n",
+      "$0.900 \\pm 0.000$ & $0.743 \\pm 0.011$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.632 ± 0.007\n",
+      "AUC: 0.677 ± 0.008\n",
+      "$0.632 \\pm 0.007$ & $0.677 \\pm 0.008$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'gluon jet: = 2, L: 3000 fb^-1'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'gluon jet: >= 1, L: 3000 fb^-1'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: 2, gluon jet: 2, L: 3000 fb^-1'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
