--- a/Note/note.tex
+++ b/Note/note.tex
@@ -282,7 +282,7 @@
 \label{sec:training_cnn}
     The total sample sizes are mentioned in section~\ref{sub:mixed_datasets}. We allocate 80\% of the data for training and 20\% for validation. The testing set consists of the SR's 10,000 VBF and 10,000 GGF events.
 
-    The convolutional neural network (CNN) model structure is summarized in figure~\ref{fig:cnn_model_structure}. The internal node uses the rectified linear unit (ReLU) as the activation function. The loss function is the binary cross-entropy. The \verb|Adam| optimizer minimizes the loss value. The learning rate is $10^{-4}$, and the batch size is 512. We employ the early stopping technique to prevent over-training issues with a patience of 10.
+    The convolutional neural network (CNN) model structure is summarized in figure~\ref{fig:cnn_model_structure}. The internal node uses the rectified linear unit (ReLU) as the activation function. The loss function is the binary cross-entropy. The \verb|Adam| optimizer minimizes the loss value. The learning rate is $10^{-4}$, and the batch size is 512. We employ the early stopping technique to prevent over-training issues with patience of 10.
     \begin{figure}[htpb]
         \centering
         \begin{tikzpicture}[
@@ -503,11 +503,11 @@
 
     \subsection{Testing sample in SR and BR}% (fold)
     \label{sub:testing_sample_in_sr_and_br}
-        The testing events used to evaluate the table~\ref{tab:supervised_CNN_training_results} are all events passing the selection and not restricted to the particular SR. Thus, to make a fair comparison with previous results, we need to evaluate the training performance on the events in SR and BR.
+        The testing events used to evaluate the table~\ref{tab:supervised_CNN_training_results} are all events passing the selection and not restricted to the particular SR. Thus, to make a fair comparison with previous results, we must evaluate the training performance on the events in SR and BR.
 
         The new testing dataset consists of the 10,000 VBF and 10,000 GGF events from SR and BR. The number of SR and BR events are computed from table~\ref{tab:GGF_VBF_Higgs_cutflow_number_mixed_dataset_225_2.3}.
 
-        The training results of table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3} are re-evaluated on the new testing set and shown in table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3_new_test_set}. The results are better than the table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3}. It seems that the events in the BR can be distinguished better than the events in SR.
+        The training results of table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3} are re-evaluated on the new testing set and shown in table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3_new_test_set}. The results are better than the table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3}. It seems that the events in the BR can be distinguished better than those in SR.
     \begin{table}[htpb]
         \centering
         \caption{The CNN training results with $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training. The selection cuts of $m_{jj} > \text{225 GeV}$ and $\Delta\eta_{jj} > 2.3$ are applied.}
@@ -526,40 +526,62 @@
 \label{sec:use_jet_tagging_results_to_construct_mixed_datasets}
     This section uses the jet tagging results to construct the mixed datasets.
 
-    Assuming the luminosity of $\mathcal{L} = \text{3000 fb}^{-1}$, we can estimate the number of events belonging to the SR and BR. The SR and BR are defined based on the number of the gluon jets $n_g$. These results are summarized in table~\ref{tab:number_of_event_in_mixed_dataset_gluon_jet}.
+    Assuming the luminosity of $\mathcal{L} = \text{3000 fb}^{-1}$, we can estimate the number of events belonging to the SR and BR. The SR and BR are defined based on the number of the gluon jets $n_g$ and quark jets $n_q$. The selection results are summarized in table~\ref{tab:number_of_event_in_mixed_dataset_gluon_jet}.
 
     \begin{table}[htpb]
         \centering
-        \caption{The number of events of mixed datasets under different selection cuts.}
+        \caption{The number of events of mixed datasets under different selection cuts. Here, $agbq$ means that $n_g=a, n_q=b$.}
         \label{tab:number_of_event_in_mixed_dataset_gluon_jet}
-        \subfloat[$n_g = 2$]{
+        \subfloat[SR: $2g0q$; \\ BR: $1g1q, 0g2q$]{
             \begin{tabular}{c|cc}
                    & GGF   & VBF   \\ \hline
                 BR & 30752 & 11779 \\
                 SR & 2941  & 47
             \end{tabular}
         }
-        \subfloat[$n_g \ge 1$]{
+        \subfloat[SR: $2g0q, 1g1q$; \\ BR: $0g2q$]{
             \begin{tabular}{c|cc}
                    & GGF   & VBF     \\ \hline
                 BR & 16828 & 10229 \\
                 SR & 16865 & 1596
             \end{tabular}
         } 
+        \subfloat[SR: $0g2q$; BR: $2g0q$]{
+            \begin{tabular}{c|cc}
+                   & GGF   & VBF     \\ \hline
+                BR & 2941  & 47      \\
+                SR & 16828 & 10229
+            \end{tabular}
+        }
     \end{table}
 
     For now, we use the truth information from \verb|Delphes| and do not consider the mis-tagging case.
 
-    The training results are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_gluon_jet}. The results are worse than the table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3_new_test_set}.
+    The training results are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_jet_tagging}. All different jet-tagging conditions produced similar performance. However, the results are worse than the table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3_new_test_set}.
     \begin{table}[htpb]
         \centering
         \caption{The CNN training results with $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training. The selection cuts of the number of gluon jets are applied.}
-        \label{tab:CWoLa_CNN_training_results_3000_pT_norm_gluon_jet}
+        \label{tab:CWoLa_CNN_training_results_3000_pT_norm_jet_tagging}
         \begin{tabular}{l|cc|cc}
-                                      & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
-            Cut                       & ACC               & AUC               & ACC               & AUC               \\ \hline
-            $n_g = 2$                 & $0.934 \pm 0.000$ & $0.689 \pm 0.012$ & $0.662 \pm 0.006$ & $0.719 \pm 0.008$ \\
-            $n_g \ge 1$               & $0.623 \pm 0.005$ & $0.642 \pm 0.005$ & $0.653 \pm 0.008$ & $0.706 \pm 0.009$ \\
+                                         & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+            Datasets                     & ACC               & AUC               & ACC               & AUC               \\ \hline
+            SR: $2g0q$; BR: $1g1q, 0g2q$ & $0.934 \pm 0.000$ & $0.689 \pm 0.012$ & $0.662 \pm 0.006$ & $0.719 \pm 0.008$ \\
+            SR: $2g0q, 1g1q$; BR: $0g2q$ & $0.623 \pm 0.005$ & $0.642 \pm 0.005$ & $0.653 \pm 0.008$ & $0.706 \pm 0.009$ \\
+            SR: $0g2q$; BR: $2g0q$       & $0.900 \pm 0.000$ & $0.740 \pm 0.010$ & $0.655 \pm 0.008$ & $0.710 \pm 0.009$
+        \end{tabular}
+    \end{table}
+
+    The training results without $p_{\text{T}}$ nomalization are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging}. All different jet-tagging conditions produced similar performance. However, the results are worse than the ones with $p_{\text{T}}$ normalization (table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_jet_tagging}) by 2\%.
+    \begin{table}[htpb]
+        \centering
+        \caption{The CNN training results without $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training. The selection cuts of the number of gluon jets are applied.}
+        \label{tab:CWoLa_CNN_training_results_3000_jet_tagging}
+        \begin{tabular}{l|cc|cc}
+                                         & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+            Datasets                     & ACC               & AUC               & ACC               & AUC               \\ \hline
+            SR: $2g0q$; BR: $1g1q, 0g2q$ & $0.934 \pm 0.000$ & $0.695 \pm 0.015$ & $0.643 \pm 0.009$ & $0.689 \pm 0.011$ \\
+            SR: $2g0q, 1g1q$; BR: $0g2q$ & $0.615 \pm 0.004$ & $0.634 \pm 0.006$ & $0.646 \pm 0.008$ & $0.690 \pm 0.011$ \\
+            SR: $0g2q$; BR: $2g0q$       & $0.900 \pm 0.000$ & $0.743 \pm 0.011$ & $0.632 \pm 0.007$ & $0.677 \pm 0.008$
         \end{tabular}
     \end{table}
 % section use_jet_tagging_results_to_construct_mixed_datasets (end)
