Code: Add class weighted for training

--- a/CNN/read_training_results.ipynb
+++ b/CNN/read_training_results.ipynb
@@ -576,12 +576,12 @@
       "\n",
       "quark jet: 2, gluon jet: 2, L: 3000 fb^-1\n",
       "ACC: 0.900 ± 0.000\n",
-      "AUC: 0.743 ± 0.011\n",
-      "$0.900 \\pm 0.000$ & $0.743 \\pm 0.011$\n",
+      "AUC: 0.739 ± 0.012\n",
+      "$0.900 \\pm 0.000$ & $0.739 \\pm 0.012$\n",
       "True ACC and AUC\n",
-      "ACC: 0.632 ± 0.007\n",
-      "AUC: 0.677 ± 0.008\n",
-      "$0.632 \\pm 0.007$ & $0.677 \\pm 0.008$\n",
+      "ACC: 0.628 ± 0.007\n",
+      "AUC: 0.671 ± 0.011\n",
+      "$0.628 \\pm 0.007$ & $0.671 \\pm 0.011$\n",
       "\n"
      ]
     }
@@ -592,6 +592,148 @@
     "print()\n",
     "\n",
     "sample_type = 'gluon jet: >= 1, L: 3000 fb^-1'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: 2, gluon jet: 2, L: 3000 fb^-1'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Jet tagging without $p_\\text{T}$ normalization, loss weighted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-04-07 16' and time < '2025-04-07 17:15'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 3000 fb^-1\n",
+      "ACC: 0.621 ± 0.006\n",
+      "AUC: 0.635 ± 0.007\n",
+      "$0.621 \\pm 0.006$ & $0.635 \\pm 0.007$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.645 ± 0.009\n",
+      "AUC: 0.688 ± 0.013\n",
+      "$0.645 \\pm 0.009$ & $0.688 \\pm 0.013$\n",
+      "\n",
+      "quark jet: >= 1, L: 3000 fb^-1\n",
+      "ACC: 0.934 ± 0.000\n",
+      "AUC: 0.679 ± 0.016\n",
+      "$0.934 \\pm 0.000$ & $0.679 \\pm 0.016$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.624 ± 0.005\n",
+      "AUC: 0.662 ± 0.008\n",
+      "$0.624 \\pm 0.005$ & $0.662 \\pm 0.008$\n",
+      "\n",
+      "quark jet: 2, gluon jet: 2, L: 3000 fb^-1\n",
+      "ACC: 0.900 ± 0.000\n",
+      "AUC: 0.730 ± 0.013\n",
+      "$0.900 \\pm 0.000$ & $0.730 \\pm 0.013$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.621 ± 0.005\n",
+      "AUC: 0.658 ± 0.008\n",
+      "$0.621 \\pm 0.005$ & $0.658 \\pm 0.008$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: >= 1, L: 3000 fb^-1'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: 2, gluon jet: 2, L: 3000 fb^-1'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Jet tagging without $p_\\text{T}$ normalization, without loss weighted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-04-07 17:30' and time < '2025-04-08'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 3000 fb^-1\n",
+      "ACC: 0.614 ± 0.007\n",
+      "AUC: 0.632 ± 0.011\n",
+      "$0.614 \\pm 0.007$ & $0.632 \\pm 0.011$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.646 ± 0.004\n",
+      "AUC: 0.691 ± 0.006\n",
+      "$0.646 \\pm 0.004$ & $0.691 \\pm 0.006$\n",
+      "\n",
+      "quark jet: >= 1, L: 3000 fb^-1\n",
+      "ACC: 0.934 ± 0.000\n",
+      "AUC: 0.693 ± 0.012\n",
+      "$0.934 \\pm 0.000$ & $0.693 \\pm 0.012$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.639 ± 0.007\n",
+      "AUC: 0.686 ± 0.010\n",
+      "$0.639 \\pm 0.007$ & $0.686 \\pm 0.010$\n",
+      "\n",
+      "quark jet: 2, gluon jet: 2, L: 3000 fb^-1\n",
+      "ACC: 0.900 ± 0.000\n",
+      "AUC: 0.745 ± 0.008\n",
+      "$0.900 \\pm 0.000$ & $0.745 \\pm 0.008$\n",
+      "True ACC and AUC\n",
+      "ACC: 0.632 ± 0.005\n",
+      "AUC: 0.677 ± 0.006\n",
+      "$0.632 \\pm 0.005$ & $0.677 \\pm 0.006$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: >= 1, L: 3000 fb^-1'\n",
     "print_ACC_AUC(df, sample_type)\n",
     "print()\n",
     "\n",
