--- a/Sample/process_h5_sample.ipynb
+++ b/Sample/process_h5_sample.ipynb
@@ -145,6 +145,10 @@
     "            gluon_jet = (j1_flavor == 21).astype(int) + (j2_flavor == 21).astype(int)\n",
     "            SR_range = gluon_jet >= cut_value\n",
     "            BR_range = gluon_jet < cut_value\n",
+    "        elif cut_type == 'quark_jet':\n",
+    "            quark_jet = (j1_flavor < 6).astype(int) + (j2_flavor < 6).astype(int)\n",
+    "            SR_range = quark_jet >= cut_value\n",
+    "            BR_range = quark_jet < cut_value\n",
     "        elif cut_type == 'quark_gluon_jet':\n",
     "            gluon_jet = (j1_flavor == 21).astype(int) + (j2_flavor == 21).astype(int)\n",
     "            quark_jet = (j1_flavor < 6).astype(int) + (j2_flavor < 6).astype(int)\n",
@@ -233,6 +237,34 @@
    "outputs": [],
    "source": [
     "cut_type = 'gluon_jet'\n",
+    "cut_value = 2\n",
+    "\n",
+    "h5_path = 'data/GGF.h5'\n",
+    "output_path = f'data/{cut_type}_{cut_value}_cut/GGF.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value)\n",
+    "\n",
+    "h5_path = 'data/VBF.h5'\n",
+    "output_path = f'data/{cut_type}_{cut_value}_cut/VBF.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value)\n",
+    "\n",
+    "cut_value = 1\n",
+    "\n",
+    "h5_path = 'data/GGF.h5'\n",
+    "output_path = f'data/{cut_type}_{cut_value}_cut/GGF.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value)\n",
+    "\n",
+    "h5_path = 'data/VBF.h5'\n",
+    "output_path = f'data/{cut_type}_{cut_value}_cut/VBF.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cut_type = 'quark_jet'\n",
     "cut_value = 2\n",
     "\n",
     "h5_path = 'data/GGF.h5'\n",
@@ -438,6 +470,38 @@
     "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
     "    h5_path = f'./data/gluon_jet_1_cut/{name}.h5'\n",
     "    out_h5 = f'./data/gluon_jet_1_cut/pre-processing/{name}.h5'\n",
+    "    to_event_image_h5(h5_path, out_h5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/quark_jet_2_cut/pre-processing/VBF_in_SR.h5\n",
+      "data/quark_jet_2_cut/pre-processing/VBF_in_BR.h5\n",
+      "data/quark_jet_2_cut/pre-processing/GGF_in_SR.h5\n",
+      "data/quark_jet_2_cut/pre-processing/GGF_in_BR.h5\n",
+      "data/quark_jet_1_cut/pre-processing/VBF_in_SR.h5\n",
+      "data/quark_jet_1_cut/pre-processing/VBF_in_BR.h5\n",
+      "data/quark_jet_1_cut/pre-processing/GGF_in_SR.h5\n",
+      "data/quark_jet_1_cut/pre-processing/GGF_in_BR.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = f'./data/quark_jet_2_cut/{name}.h5'\n",
+    "    out_h5 = f'./data/quark_jet_2_cut/pre-processing/{name}.h5'\n",
+    "    to_event_image_h5(h5_path, out_h5)\n",
+    "\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = f'./data/quark_jet_1_cut/{name}.h5'\n",
+    "    out_h5 = f'./data/quark_jet_1_cut/pre-processing/{name}.h5'\n",
     "    to_event_image_h5(h5_path, out_h5)"
    ]
   },
@@ -662,6 +726,53 @@
     "\n",
     "h5_dir = Path('./data/gluon_jet_1_cut/pre-processing')\n",
     "npy_dir = Path(f'./data/gluon_jet_1_cut/pre-processing/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
+    "    print(cmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python pixelation.py data/quark_jet_2_cut/pre-processing/VBF_in_SR.h5 data/quark_jet_2_cut/pre-processing/40x40/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pre-processing/VBF_in_BR.h5 data/quark_jet_2_cut/pre-processing/40x40/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pre-processing/GGF_in_SR.h5 data/quark_jet_2_cut/pre-processing/40x40/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pre-processing/GGF_in_BR.h5 data/quark_jet_2_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_1_cut/pre-processing/VBF_in_SR.h5 data/quark_jet_1_cut/pre-processing/40x40/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_1_cut/pre-processing/VBF_in_BR.h5 data/quark_jet_1_cut/pre-processing/40x40/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_1_cut/pre-processing/GGF_in_SR.h5 data/quark_jet_1_cut/pre-processing/40x40/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_1_cut/pre-processing/GGF_in_BR.h5 data/quark_jet_1_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = 40\n",
+    "h5_dir = Path('./data/quark_jet_2_cut/pre-processing')\n",
+    "npy_dir = Path(f'./data/quark_jet_2_cut/pre-processing/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
+    "    print(cmd)\n",
+    "\n",
+    "h5_dir = Path('./data/quark_jet_1_cut/pre-processing')\n",
+    "npy_dir = Path(f'./data/quark_jet_1_cut/pre-processing/{res}x{res}')\n",
     "\n",
     "# create output directory\n",
     "npy_dir.mkdir(parents=True, exist_ok=True)\n",
