--- a/CNN/training_setup.ipynb
+++ b/CNN/training_setup.ipynb
@@ -825,6 +825,120 @@
     "    print(cmd)\n",
     "    i += 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Jet tagging without $p_\\text{T}$ normalization, loss weighted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_config_10.json\n",
+      "python train_CNN.py config_files/quark_jet_1_cut_L_3000_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_1_cut_L_3000_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_1_cut_L_3000_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_1_cut_L_3000_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_1_cut_L_3000_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_1_cut_L_3000_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_1_cut_L_3000_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_1_cut_L_3000_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_1_cut_L_3000_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_1_cut_L_3000_config_10.json\n",
+      "python train_CNN.py config_files/quark_gluon_jet_2_cut_L_3000_config_01.json\n",
+      "python train_CNN.py config_files/quark_gluon_jet_2_cut_L_3000_config_02.json\n",
+      "python train_CNN.py config_files/quark_gluon_jet_2_cut_L_3000_config_03.json\n",
+      "python train_CNN.py config_files/quark_gluon_jet_2_cut_L_3000_config_04.json\n",
+      "python train_CNN.py config_files/quark_gluon_jet_2_cut_L_3000_config_05.json\n",
+      "python train_CNN.py config_files/quark_gluon_jet_2_cut_L_3000_config_06.json\n",
+      "python train_CNN.py config_files/quark_gluon_jet_2_cut_L_3000_config_07.json\n",
+      "python train_CNN.py config_files/quark_gluon_jet_2_cut_L_3000_config_08.json\n",
+      "python train_CNN.py config_files/quark_gluon_jet_2_cut_L_3000_config_09.json\n",
+      "python train_CNN.py config_files/quark_gluon_jet_2_cut_L_3000_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/']\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_{i:02}'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1\n",
+    "\n",
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_1_cut_L_3000_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_1_cut/pre-processing/40x40/']\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_1'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_1_cut_{i:02}'\n",
+    "        data['sample_type'] = f'quark jet: >= 1, L: 3000 fb^-1'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1\n",
+    "\n",
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_gluon_jet_2_cut_L_3000_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_gluon_jet_2_cut/pre-processing/40x40/']\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_gluon_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_2q2g_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_2q2g_jet.npy'\n",
+    "        data['model_name'] = f'quark_gluon_jet_2_cut_{i:02}'\n",
+    "        data['sample_type'] = f'quark jet: 2, gluon jet: 2, L: 3000 fb^-1'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
   }
  ],
  "metadata": {
