--- a/Note/note.tex
+++ b/Note/note.tex
@@ -532,32 +532,32 @@
         \centering
         \caption{The number of events of mixed datasets under different selection cuts. Here, $agbq$ means that $n_g=a, n_q=b$.}
         \label{tab:number_of_event_in_mixed_dataset_gluon_jet}
-        \subfloat[SR: $2g0q$; \\ BR: $1g1q, 0g2q$]{
+        \subfloat[SR: $2q0g$; \\ BR: $1q1g, 0q2g$]{
             \begin{tabular}{c|cc}
-                   & GGF   & VBF   \\ \hline
-                BR & 30752 & 11779 \\
-                SR & 2941  & 47
+                   & GGF   & VBF     \\ \hline
+                SR & 16828 & 10229   \\
+                BR & 16865 & 1596    \\
             \end{tabular}
         }
-        \subfloat[SR: $2g0q, 1g1q$; \\ BR: $0g2q$]{
+        \subfloat[SR: $2q0g, 1q1g$; \\ BR: $0q2g$]{
             \begin{tabular}{c|cc}
-                   & GGF   & VBF     \\ \hline
-                BR & 16828 & 10229 \\
-                SR & 16865 & 1596
+                   & GGF   & VBF   \\ \hline
+                SR & 30752 & 11779 \\
+                BR & 2941  & 47    \\
             \end{tabular}
-        } 
-        \subfloat[SR: $0g2q$; BR: $2g0q$]{
+        }
+        \subfloat[SR: $2q0g$; BR: $0q2g$]{
             \begin{tabular}{c|cc}
                    & GGF   & VBF     \\ \hline
+                SR & 16828 & 10229   \\
                 BR & 2941  & 47      \\
-                SR & 16828 & 10229
             \end{tabular}
         }
     \end{table}
 
     For now, we use the truth information from \verb|Delphes| and do not consider the mis-tagging case.
 
-    The training results are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_jet_tagging}. All different jet-tagging conditions produced similar performance. However, the results are worse than the table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3_new_test_set}.
+    The training results are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_jet_tagging}. All different jet-tagging conditions produced similar performance. However, the results are worse than the ones of kinematic cuts (table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_225_2.3_new_test_set}).
     \begin{table}[htpb]
         \centering
         \caption{The CNN training results with $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training. The selection cuts of the number of gluon jets are applied.}
@@ -565,9 +565,9 @@
         \begin{tabular}{l|cc|cc}
                                          & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
             Datasets                     & ACC               & AUC               & ACC               & AUC               \\ \hline
-            SR: $2g0q$; BR: $1g1q, 0g2q$ & $0.934 \pm 0.000$ & $0.689 \pm 0.012$ & $0.662 \pm 0.006$ & $0.719 \pm 0.008$ \\
-            SR: $2g0q, 1g1q$; BR: $0g2q$ & $0.623 \pm 0.005$ & $0.642 \pm 0.005$ & $0.653 \pm 0.008$ & $0.706 \pm 0.009$ \\
-            SR: $0g2q$; BR: $2g0q$       & $0.900 \pm 0.000$ & $0.740 \pm 0.010$ & $0.655 \pm 0.008$ & $0.710 \pm 0.009$
+            SR: $2q0g$; BR: $1q1g, 0q2g$ & $0.623 \pm 0.005$ & $0.642 \pm 0.005$ & $0.653 \pm 0.008$ & $0.706 \pm 0.009$ \\
+            SR: $2q0g, 1q1g$; BR: $0q2g$ & $0.934 \pm 0.000$ & $0.689 \pm 0.012$ & $0.662 \pm 0.006$ & $0.719 \pm 0.008$ \\
+            SR: $2q0g$; BR: $0q2g$       & $0.900 \pm 0.000$ & $0.740 \pm 0.010$ & $0.655 \pm 0.008$ & $0.710 \pm 0.009$
         \end{tabular}
     \end{table}
 
@@ -579,12 +579,84 @@
         \begin{tabular}{l|cc|cc}
                                          & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
             Datasets                     & ACC               & AUC               & ACC               & AUC               \\ \hline
-            SR: $2g0q$; BR: $1g1q, 0g2q$ & $0.934 \pm 0.000$ & $0.695 \pm 0.015$ & $0.643 \pm 0.009$ & $0.689 \pm 0.011$ \\
-            SR: $2g0q, 1g1q$; BR: $0g2q$ & $0.615 \pm 0.004$ & $0.634 \pm 0.006$ & $0.646 \pm 0.008$ & $0.690 \pm 0.011$ \\
-            SR: $0g2q$; BR: $2g0q$       & $0.900 \pm 0.000$ & $0.743 \pm 0.011$ & $0.632 \pm 0.007$ & $0.677 \pm 0.008$
+            SR: $2q0g$; BR: $1q1g, 0q2g$ & $0.614 \pm 0.007$ & $0.632 \pm 0.011$ & $0.646 \pm 0.008$ & $0.690 \pm 0.011$ \\
+            SR: $2q0g, 1q1g$; BR: $0q2g$ & $0.934 \pm 0.000$ & $0.695 \pm 0.015$ & $0.643 \pm 0.009$ & $0.689 \pm 0.011$ \\
+            SR: $2q0g$; BR: $0q2g$       & $0.900 \pm 0.000$ & $0.743 \pm 0.011$ & $0.632 \pm 0.007$ & $0.677 \pm 0.008$
         \end{tabular}
     \end{table}
+
+    \subsection{Loss weighted}% (fold)
+    \label{sub:loss_weighted}
+        Since the sample sizes are unbablanced, we add the class weighted. The weights are propotional to the reciprocal of number of events.
+
+        The training results with class weighted are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging_weighted_loss}. All different jet-tagging conditions produced similar performance.
+    \begin{table}[htpb]
+        \centering
+        \caption{The CNN training results without $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training. The selection cuts of the number of gluon jets are applied.}
+        \label{tab:CWoLa_CNN_training_results_3000_jet_tagging_weighted_loss}
+        \begin{tabular}{l|cc|cc}
+                                         & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+            Datasets                     & ACC               & AUC               & ACC               & AUC               \\ \hline
+            SR: $2q0g$; BR: $1q1g, 0q2g$ & $0.621 \pm 0.006$ & $0.635 \pm 0.007$ & $0.645 \pm 0.009$ & $0.688 \pm 0.013$ \\
+            SR: $2q0g, 1q1g$; BR: $0q2g$ & $0.934 \pm 0.000$ & $0.679 \pm 0.016$ & $0.624 \pm 0.005$ & $0.662 \pm 0.008$ \\
+            SR: $2q0g$; BR: $0q2g$       & $0.900 \pm 0.000$ & $0.730 \pm 0.013$ & $0.621 \pm 0.005$ & $0.658 \pm 0.008$
+        \end{tabular}
+    \end{table}
+    % subsection loss_weighted (end)
 % section use_jet_tagging_results_to_construct_mixed_datasets (end)
+\section{Total scaling of transverse momentum}% (fold)
+\label{sec:total_scaling_of_transverse_momentum}
+    The $p_{\text{T}}$ normalization remove the magnitude information of the input datasets. Thus, we would expect the training performance of the $p_{\text{T}}$ normalization datasets would be worse than the one without it. However, table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_jet_tagging} and \ref{tab:CWoLa_CNN_training_results_3000_jet_tagging} shows the opposite results.
+
+    To explore the reason why the $p_\text{T}$ normalization could improve the training performance, we try the total $p_{\text{T}}$ scaling, which computes the mean and statard deviation of all input samples. Then, use these values to standardize the input datasets.
+
+    \subsection{Results}% (fold)
+    \label{sub:results}
+        The training results with $p_{\text{T}}$ scaling are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging_pT_scaling}. All different jet-tagging conditions produced similar performance. However, the results are worse than the ones with $p_{\text{T}}$ normalization (table~\ref{tab:CWoLa_CNN_training_results_3000_pT_norm_jet_tagging}).
+        \begin{table}[htpb]
+            \centering
+            \caption{The CNN training results with $p_{\text{T}}$ scaling technique. The ACC and AUC are evaluated based on 10 training. The selection cuts of the number of gluon jets are applied.}
+            \label{tab:CWoLa_CNN_training_results_3000_jet_tagging_pT_scaling}
+            \begin{tabular}{l|cc|cc}
+                                             & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+                Datasets                     & ACC               & AUC               & ACC               & AUC               \\ \hline
+                SR: $2q0g$; BR: $1q1g, 0q2g$ & $0.622 \pm 0.004$ & $0.637 \pm 0.008$ & $0.638 \pm 0.009$ & $0.678 \pm 0.011$ \\
+                SR: $2q0g, 1q1g$; BR: $0q2g$ & $0.934 \pm 0.000$ & $0.673 \pm 0.032$ & $0.619 \pm 0.019$ & $0.652 \pm 0.029$ \\
+                SR: $2q0g$; BR: $0q2g$       & $0.900 \pm 0.000$ & $0.733 \pm 0.011$ & $0.621 \pm 0.006$ & $0.657 \pm 0.009$
+            \end{tabular}
+        \end{table}
+
+        The training results with $p_{\text{T}}$ normalization are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging_w_pT_norm}. 
+        \begin{table}[htpb]
+            \centering
+            \caption{The CNN training results with $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training. The selection cuts of the number of gluon jets are applied.}
+            \label{tab:CWoLa_CNN_training_results_3000_jet_tagging_w_pT_norm}
+            \begin{tabular}{l|cc|cc}
+                                             & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+                Datasets                     & ACC               & AUC               & ACC               & AUC               \\ \hline
+                SR: $2q0g$; BR: $1q1g, 0q2g$ & $0.615 \pm 0.005$ & $0.632 \pm 0.007$ & $0.650 \pm 0.011$ & $0.703 \pm 0.015$ \\
+                SR: $2q0g, 1q1g$; BR: $0q2g$ & $0.934 \pm 0.000$ & $0.662 \pm 0.014$ & $0.630 \pm 0.008$ & $0.675 \pm 0.011$ \\
+                SR: $2q0g$; BR: $0q2g$       & $0.900 \pm 0.000$ & $0.716 \pm 0.012$ & $0.640 \pm 0.007$ & $0.690 \pm 0.009$
+            \end{tabular}
+        \end{table}
+
+        The training results without $p_{\text{T}}$ normalization are summarized in table~\ref{tab:CWoLa_CNN_training_results_3000_jet_tagging_wo_pT_norm}. 
+        \begin{table}[htpb]
+            \centering
+            \caption{The CNN training results without $p_{\text{T}}$ normalization technique. The ACC and AUC are evaluated based on 10 training. The selection cuts of the number of gluon jets are applied.}
+            \label{tab:CWoLa_CNN_training_results_3000_jet_tagging_wo_pT_norm}
+            \begin{tabular}{l|cc|cc}
+                                             & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+                Datasets                     & ACC               & AUC               & ACC               & AUC               \\ \hline
+                SR: $2q0g$; BR: $1q1g, 0q2g$ & $0.620 \pm 0.004$ & $0.636 \pm 0.005$ & $0.643 \pm 0.006$ & $0.686 \pm 0.007$ \\
+                SR: $2q0g, 1q1g$; BR: $0q2g$ & $0.934 \pm 0.000$ & $0.680 \pm 0.014$ & $0.624 \pm 0.010$ & $0.660 \pm 0.016$ \\
+                SR: $2q0g$; BR: $0q2g$       & $0.900 \pm 0.000$ & $0.727 \pm 0.010$ & $0.628 \pm 0.008$ & $0.666 \pm 0.011$
+            \end{tabular}
+        \end{table}
+
+    % subsection results (end)
+
+% section total_scaling_of_transverse_momentum (end)
 \bibliographystyle{ieeetr}
 \bibliography{reference}
 
