Code: Train CNN with pT augmentation datasets

--- a/CNN/CNN.ipynb
+++ b/CNN/CNN.ipynb
@@ -10,9 +10,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-07 16:27:10.680732: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
+      "2025-04-18 16:10:26.573622: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-04-07 16:27:10.905921: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2025-04-18 16:10:26.904751: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -42,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f9fcd7e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_mix_sample_from(npy_dirs: list, nevents: tuple, ratios=(0.8,0.2), seed=0):\n",
+    "def create_mix_sample_from(npy_dirs: list, nevents: tuple, ratios=(0.8, 0.2), seed=0):\n",
     "    # npy_dirs: list of npy directories\n",
     "    # nevents: tuple of (n_VBF_SR, n_VBF_BR, n_GGF_SR, n_GGF_BR)\n",
     "    # ratios: tuple of (r_train, r_val)\n",
@@ -111,37 +111,49 @@
     "            data_VBF_BR[idx_VBF_BR_vl],\n",
     "            data_GGF_BR[idx_GGF_BR_vl]\n",
     "        ], axis=0)\n",
-    "        new_data_te = np.concatenate([\n",
-    "            data_VBF_SR[idx_VBF_SR_te],\n",
-    "            data_VBF_BR[idx_VBF_BR_te],\n",
-    "            data_GGF_SR[idx_GGF_SR_te],\n",
-    "            data_GGF_BR[idx_GGF_BR_te],\n",
-    "        ], axis=0)\n",
+    "        # new_data_te = np.concatenate([\n",
+    "        #     data_VBF_SR[idx_VBF_SR_te],\n",
+    "        #     data_VBF_BR[idx_VBF_BR_te],\n",
+    "        #     data_GGF_SR[idx_GGF_SR_te],\n",
+    "        #     data_GGF_BR[idx_GGF_BR_te],\n",
+    "        # ], axis=0)\n",
     "\n",
     "        if data_tr is None:\n",
     "            data_tr = new_data_tr\n",
     "            data_vl = new_data_vl\n",
-    "            data_te = new_data_te\n",
+    "            # data_te = new_data_te\n",
     "        else:\n",
     "            data_tr = np.concatenate([data_tr, new_data_tr], axis=0)\n",
     "            data_vl = np.concatenate([data_vl, new_data_vl], axis=0)\n",
-    "            data_te = np.concatenate([data_te, new_data_te], axis=0)\n",
+    "            # data_te = np.concatenate([data_te, new_data_te], axis=0)\n",
     "\n",
     "        new_label_tr = np.zeros(new_data_tr.shape[0])\n",
     "        new_label_tr[:idx_VBF_SR_tr.shape[0] + idx_GGF_SR_tr.shape[0]] = 1\n",
     "        new_label_vl = np.zeros(new_data_vl.shape[0])\n",
     "        new_label_vl[:idx_VBF_SR_vl.shape[0] + idx_GGF_SR_vl.shape[0]] = 1\n",
-    "        new_label_te = np.zeros(new_data_te.shape[0])\n",
-    "        new_label_te[:n_test] = 1\n",
+    "        # new_label_te = np.zeros(new_data_te.shape[0])\n",
+    "        # new_label_te[:n_test] = 1\n",
     "\n",
     "        if label_tr is None:\n",
     "            label_tr = new_label_tr\n",
     "            label_vl = new_label_vl\n",
-    "            label_te = new_label_te\n",
+    "            # label_te = new_label_te\n",
     "        else:\n",
     "            label_tr = np.concatenate([label_tr, new_label_tr])\n",
     "            label_vl = np.concatenate([label_vl, new_label_vl])\n",
-    "            label_te = np.concatenate([label_te, new_label_te])\n",
+    "            # label_te = np.concatenate([label_te, new_label_te])\n",
+    "\n",
+    "    new_data_te = np.concatenate([\n",
+    "        data_VBF_SR[idx_VBF_SR_te],\n",
+    "        data_VBF_BR[idx_VBF_BR_te],\n",
+    "        data_GGF_SR[idx_GGF_SR_te],\n",
+    "        data_GGF_BR[idx_GGF_BR_te],\n",
+    "    ], axis=0)\n",
+    "    data_te = new_data_te\n",
+    "\n",
+    "    new_label_te = np.zeros(new_data_te.shape[0])\n",
+    "    new_label_te[:n_test] = 1\n",
+    "    label_te = new_label_te\n",
     "\n",
     "    return data_tr, data_vl, data_te, label_tr, label_vl, label_te"
    ]
@@ -233,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_path = './config_files/quark_jet_1_cut_L_3000_config_01.json'"
+    "config_path = './config_files/quark_jet_2_cut_L_3000_pT_norm_config_01.json'"
    ]
   },
   {
@@ -270,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "8047d335",
    "metadata": {},
    "outputs": [
@@ -278,8 +290,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "145155 17174 330686 1501\n",
-      "Preparing dataset from ['../Sample/data/quark_jet_1_cut/pre-processing/40x40/']\n"
+      "78945 83384 286751 45436\n",
+      "Preparing dataset from ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/', '../Sample/data/quark_jet_2_cut/pT_smearing/40x40/01/', '../Sample/data/quark_jet_2_cut/pT_smearing/40x40/01/', '../Sample/data/quark_jet_2_cut/pT_smearing/40x40/01/', '../Sample/data/quark_jet_2_cut/pT_smearing/40x40/01/', '../Sample/data/quark_jet_2_cut/pT_smearing/40x40/01/']\n"
      ]
     }
    ],
@@ -294,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "016c0cdd",
    "metadata": {},
    "outputs": [],
@@ -311,6 +323,22 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "e6c7d8c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pt_scaling(X):\n",
+    "    # input shape: (n, res, res, 3)\n",
+    "    mean = np.mean(X, axis=(0, 1, 2), keepdims=True)\n",
+    "    std = np.std(X, axis=(0, 1, 2), keepdims=True)\n",
+    "    epsilon = 1e-8\n",
+    "    std = np.where(std < epsilon, epsilon, std)\n",
+    "    return (X - mean) / std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "4fabdaf1",
    "metadata": {},
    "outputs": [],
@@ -324,6 +352,18 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "0ac4e5d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = pt_scaling(X_train)\n",
+    "X_val = pt_scaling(X_val)\n",
+    "X_test = pt_scaling(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "065a7d6d",
    "metadata": {},
    "outputs": [
@@ -331,8 +371,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34023 2388\n",
-      "8507 599\n",
+      "129864 88608\n",
+      "32472 22158\n",
       "10000 10000\n"
      ]
     }
@@ -345,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "ef21c961",
    "metadata": {},
    "outputs": [
@@ -353,9 +393,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-07 16:27:46.317730: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
+      "2025-04-18 16:20:49.655367: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-04-07 16:27:46.977805: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 22288 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:d8:00.0, compute capability: 8.6\n"
+      "2025-04-18 16:20:49.789162: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 3 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:d8:00.0, compute capability: 8.6\n"
      ]
     }
    ],
@@ -379,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "91f64d2d",
    "metadata": {},
    "outputs": [],
@@ -416,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "b465de0a",
    "metadata": {},
    "outputs": [],
@@ -511,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "e7c8da0b",
    "metadata": {},
    "outputs": [],
@@ -526,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "aed89563",
    "metadata": {},
    "outputs": [],
@@ -541,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "60f2ad6d",
    "metadata": {},
    "outputs": [
