--- a/Sample/process_h5_sample.ipynb
+++ b/Sample/process_h5_sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,16 @@
     "    'Track': 150,\n",
     "    'Photon': 2,\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pt_scale(pt):\n",
+    "    return np.sqrt(0.052*pt*pt + 1.502*pt)"
    ]
   },
   {
@@ -532,6 +542,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# $p_\\text{T}$ smearing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pt_smearing(h5_path, out_h5):\n",
+    "\n",
+    "    out_h5 = Path(out_h5)\n",
+    "    out_h5.parent.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    shutil.copyfile(h5_path, out_h5)\n",
+    "\n",
+    "    with h5py.File(out_h5, 'a') as f_out:\n",
+    "        print(out_h5)\n",
+    "        # Take pT information\n",
+    "        event_pt = np.concatenate([f_out['TOWER/pt'][:], f_out['TRACK/pt'][:], f_out['PHOTON/pt'][:]], axis=1)\n",
+    "            \n",
+    "        # Smearing pt\n",
+    "        event_pt_tmp = np.random.normal(loc=event_pt, scale=pt_scale(event_pt))\n",
+    "        # set negative pt as 0\n",
+    "        event_pt_tmp[event_pt_tmp < 0] = 0\n",
+    "        event_eta = np.concatenate([f_out['TOWER/eta'][:], f_out['TRACK/eta'][:], f_out['PHOTON/eta'][:]], axis=1)\n",
+    "        event_phi = np.concatenate([f_out['TOWER/phi'][:], f_out['TRACK/phi'][:], f_out['PHOTON/phi'][:]], axis=1)\n",
+    "\n",
+    "        _, _, new_phi = phi_shift_and_flipping(event_pt_tmp, event_eta, event_phi)\n",
+    "\n",
+    "        f_out['TOWER/phi'][:] = new_phi[:, :MAX_CONSTI['Tower']]\n",
+    "        f_out['TRACK/phi'][:] = new_phi[:, MAX_CONSTI['Tower']:MAX_CONSTI['Tower']+MAX_CONSTI['Track']]\n",
+    "        f_out['PHOTON/phi'][:] = new_phi[:, MAX_CONSTI['Tower']+MAX_CONSTI['Track']:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/quark_jet_2_cut/pT_smearing/11/VBF_in_SR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/11/VBF_in_BR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/11/GGF_in_SR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/11/GGF_in_BR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/12/VBF_in_SR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/12/VBF_in_BR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/12/GGF_in_SR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/12/GGF_in_BR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/13/VBF_in_SR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/13/VBF_in_BR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/13/GGF_in_SR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/13/GGF_in_BR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/14/VBF_in_SR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/14/VBF_in_BR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/14/GGF_in_SR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/14/GGF_in_BR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/15/VBF_in_SR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/15/VBF_in_BR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/15/GGF_in_SR.h5\n",
+      "data/quark_jet_2_cut/pT_smearing/15/GGF_in_BR.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(11, 16):\n",
+    "    \n",
+    "    out_dir = Path(f'./data/quark_jet_2_cut/pT_smearing/{n:02}')\n",
+    "\n",
+    "    for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "        h5_path = f'./data/quark_jet_2_cut/{name}.h5'\n",
+    "        out_h5 = out_dir / f'{name}.h5'\n",
+    "        pt_smearing(h5_path, out_h5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Pixelation"
    ]
   },
@@ -813,6 +905,61 @@
     "    npy_path = npy_dir / f'{name}.npy'\n",
     "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
     "    print(cmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $p_\\text{T}$ smearing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/11/VBF_in_SR.h5 data/quark_jet_2_cut/pT_smearing/40x40/11/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/11/VBF_in_BR.h5 data/quark_jet_2_cut/pT_smearing/40x40/11/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/11/GGF_in_SR.h5 data/quark_jet_2_cut/pT_smearing/40x40/11/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/11/GGF_in_BR.h5 data/quark_jet_2_cut/pT_smearing/40x40/11/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/12/VBF_in_SR.h5 data/quark_jet_2_cut/pT_smearing/40x40/12/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/12/VBF_in_BR.h5 data/quark_jet_2_cut/pT_smearing/40x40/12/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/12/GGF_in_SR.h5 data/quark_jet_2_cut/pT_smearing/40x40/12/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/12/GGF_in_BR.h5 data/quark_jet_2_cut/pT_smearing/40x40/12/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/13/VBF_in_SR.h5 data/quark_jet_2_cut/pT_smearing/40x40/13/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/13/VBF_in_BR.h5 data/quark_jet_2_cut/pT_smearing/40x40/13/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/13/GGF_in_SR.h5 data/quark_jet_2_cut/pT_smearing/40x40/13/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/13/GGF_in_BR.h5 data/quark_jet_2_cut/pT_smearing/40x40/13/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/14/VBF_in_SR.h5 data/quark_jet_2_cut/pT_smearing/40x40/14/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/14/VBF_in_BR.h5 data/quark_jet_2_cut/pT_smearing/40x40/14/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/14/GGF_in_SR.h5 data/quark_jet_2_cut/pT_smearing/40x40/14/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/14/GGF_in_BR.h5 data/quark_jet_2_cut/pT_smearing/40x40/14/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/15/VBF_in_SR.h5 data/quark_jet_2_cut/pT_smearing/40x40/15/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/15/VBF_in_BR.h5 data/quark_jet_2_cut/pT_smearing/40x40/15/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/15/GGF_in_SR.h5 data/quark_jet_2_cut/pT_smearing/40x40/15/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/pT_smearing/15/GGF_in_BR.h5 data/quark_jet_2_cut/pT_smearing/40x40/15/GGF_in_BR.npy 40 &\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = 40\n",
+    "for n in range(11, 16):\n",
+    "\n",
+    "    h5_dir = Path(f'./data/quark_jet_2_cut/pT_smearing/{n:02}')\n",
+    "    npy_dir = Path(f'./data/quark_jet_2_cut/pT_smearing/{res}x{res}/{n:02}')\n",
+    "\n",
+    "    npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "        h5_path = h5_dir / f'{name}.h5'\n",
+    "        npy_path = npy_dir / f'{name}.npy'\n",
+    "        cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
+    "        print(cmd)"
    ]
   }
  ],
